# lora-lite-phy

./: --output  .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPLETE_SYSTEM_DOCUMENTATION.md  CONTRIBUTING.md  Doxyfile  GNU_RADIO_TEST_INSTRUCTIONS.md  LICENSE  LoRa_Lite_Migration_Plan_README.md  NEXT_STEPS_PLAN.md  PROJECT_NOTES.md  PROJECT_STRUCTURE.md  Practical Solutions for the "Reference Vector Decoding" Issue.md  README.md  README_GNU_RADIO_COMPAT.md  README_LoRa_Lite_GR_Compatibility.md  README_NEW.md  README_Reference_Vector_Decoding_Plan.md  advanced_demod_analysis.py  advanced_optimization.py  advanced_symbol_extraction.py  analyze_frame_structure.cpp  analyze_frame_structure.py  analyze_hello_world.py  batch_lora_decoder.py  beyond_five_eighths.py  brute_force_search.py  callgrind.out.1760901854  callgrind.out.1760902846  callgrind.out.1760903754  callgrind.out.1760904758  callgrind.out.1760904933  callgrind.out.1760905077  callgrind.out.1760905699  callgrind.out.1760906191  callgrind.out.1760906537  (+60 more)
.devcontainer/: Dockerfile  devcontainer.json
analysis/: README.md  __init__.py  advanced_demod_analysis.py  measure_symbol_accuracy.py  position_optimization.py  ultimate_project_summary.py  ultra_deep_analysis.py
arduino/: README.md
benchmarks/: benchmark_receivers.py  benchmark_v3.py  comprehensive_v3_test.py  tx_rx_bench.cpp
config/: requirements.txt
cpp_receiver/: CMakeLists.txt  README.md
cpp_receiver/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  decode_cli  header_probe
cpp_receiver/include/: chirp_generator.hpp  fft_utils.hpp  frame_sync.hpp  hamming.hpp  header_decoder.hpp  iq_loader.hpp  payload_decoder.hpp  preamble_detector.hpp  receiver.hpp  sample_rate_resampler.hpp  streaming_receiver.hpp  sync_word_detector.hpp
cpp_receiver/src/: chirp_generator.cpp  fft_utils.cpp  frame_sync.cpp  hamming.cpp  header_decoder.cpp  iq_loader.cpp  payload_decoder.cpp  preamble_detector.cpp  receiver.cpp  sample_rate_resampler.cpp  streaming_receiver.cpp  sync_word_detector.cpp
cpp_receiver/tests/: run_stage_tests.cpp
cpp_receiver/tools/: decode_cli.cpp  header_probe.cpp  socket_stream_client.cpp  streaming_harness.cpp  sync_mags.cpp  tx_rx_simulation.cpp
debug/: debug_all_symbols.py  debug_file_read.cpp  debug_symbol3.py
docs/: COMPLETE_SYSTEM_DOCUMENTATION.md  FINAL_SUCCESS.md  GNU_RADIO_COMPAT.md  LoRa_Lite_Migration_Plan_README.md  PAYLOAD_REFERENCE.md  PERFORMANCE_ANALYSIS.md  PROJECT_ORGANIZATION.md  README.md  RECEIVER_PARITY_STATUS.md  SCHEDULER_README.md  VALIDATION_SUCCESS.md  automation_harness_design.md  comparison_baseline_alignment.md  extended_batch_status.md  gnu_radio_comparison.md  gnu_radio_compatibility_report.md  hackrf_ota_test_plan.md  hardware_inventory.md  hardware_test_plan.md  host_vs_gnuradio_sweep_comparison.json  offline_decode_investigation.md  ota_interop_results.md  receiver_vs_gnuradio_matrix.json  receiver_vs_gnuradio_payload_comparison.md  receiver_vs_gnuradio_report.md  receiver_vs_gnuradio_results.json  receiver_vs_gnuradio_summary.md  receiver_vs_gnuradio_sweep_matrix.json  receiver_vs_gnuradio_sweep_report.md  receiver_vs_gnuradio_sweep_results.json  rev_eng_lora.md  (+27 more)
host_sim/: CMakeLists.txt  README.md
host_sim/cmake/: multi_packet_test.cmake  tx_hex_roundtrip_test.cmake  tx_impairment_test.cmake  tx_multi_packet_test.cmake  tx_nocrc_test.cmake  tx_roundtrip_test.cmake  tx_soft_decode_test.cmake
host_sim/data/ota/: metadata.json  packet_0.cf32  packet_1.cf32  packet_2.cf32  packet_3.cf32  sf10_bw125_cr5.cf32  sf10_bw125_cr5_meta.json  sf10_bw125_cr6.cf32  sf10_bw125_cr6_meta.json  sf10_bw125_cr7.cf32  sf10_bw125_cr7_meta.json  sf10_bw125_cr8.cf32  sf10_bw125_cr8_meta.json  sf10_bw250_cr5.cf32  sf10_bw250_cr5_meta.json  sf10_bw500_cr5.cf32  sf10_bw500_cr5_meta.json  sf11_bw125_cr5.cf32  sf11_bw125_cr5_meta.json  sf11_bw125_cr6.cf32  sf11_bw125_cr6_meta.json  sf11_bw125_cr7.cf32  sf11_bw125_cr7_meta.json  sf11_bw125_cr8.cf32  sf11_bw125_cr8_meta.json  sf11_bw250_cr5.cf32  sf11_bw250_cr5_meta.json  sf11_bw500_cr5.cf32  sf11_bw500_cr5_meta.json  sf12_bw125_cr5.cf32  sf12_bw125_cr5_meta.json  sf12_bw125_cr6.cf32  sf12_bw125_cr6_meta.json  sf12_bw125_cr7.cf32  sf12_bw125_cr7_meta.json  sf12_bw125_cr8.cf32  sf12_bw125_cr8_meta.json  sf12_bw250_cr5.cf32  sf12_bw250_cr5_meta.json  sf12_bw500_cr5.cf32  (+43 more)
host_sim/include/host_sim/: alignment.hpp  capture.hpp  chirp.hpp  deinterleaver.hpp  fft_demod.hpp  fft_demod_q15.hpp  fft_demod_ref.hpp  gray.hpp  hamming.hpp  impairments.hpp  live_source.hpp  lora_params.hpp  numeric_traits.hpp  q15.hpp  real_time_controller.hpp  scheduler.hpp  soapy_live_adapter.hpp  soft_decode.hpp  stage.hpp  symbol_context.hpp  symbol_source.hpp  whitening.hpp
host_sim/include/host_sim/lora_replay/: DemodulationPipeline.hpp  HeaderSearcher.hpp  PayloadProcessor.hpp  cfo_estimator.hpp  header_decoder.hpp  header_encoder.hpp  instrumentation.hpp  options.hpp  stage_processing.hpp
host_sim/include/host_sim/stages/: demod_stage.hpp
host_sim/src/: alignment.cpp  capture.cpp  chirp.cpp  deinterleaver.cpp  fft_demod.cpp  fft_demod_q15.cpp  fft_demod_ref.cpp  hamming.cpp  impairments.cpp  live_source.cpp  lora_params.cpp  lora_replay.cpp  lora_replay_cfo_estimator.cpp  lora_replay_header_encoder.cpp  lora_replay_instrumentation.cpp  lora_replay_options.cpp  lora_replay_stage_processing.cpp  lora_tx.cpp  real_time_controller.cpp  scheduler.cpp  soapy_live_adapter.cpp  soft_decode.cpp  whitening.cpp
host_sim/src/lora_replay/: DemodulationPipeline.cpp  HeaderSearcher.cpp  PayloadProcessor.cpp
host_sim/tests/: test_live_loopback.cpp  test_live_soak.cpp  test_lora_replay_cfo.cpp  test_lora_replay_header.cpp  test_lora_replay_stage_processing.cpp  test_numeric_modes.cpp  test_numeric_traits.cpp  test_q15_demod.cpp  test_scheduler_golden.cpp  test_scheduler_reconfigure.cpp  test_soft_decode.cpp
standalone/: CMakeLists.txt  README.md
standalone/include/: dsp.hpp  state_machine.hpp
standalone/src/: dsp.cpp  main.cpp  state_machine.cpp
(+2853 files in other folders)
